# cmake_versioning

./: .gitignore  CMakeLists.txt  main.cpp
cmake/versioning/: deploy_version.cmake  deploy_with_crc_and_version.sh  generate_git_describe.cmake  targets.cmake  version.c.in  version.h  version_deploy.c.in  version_git_only.c.in
scripts/: deploy_with_crc_and_version.sh
version/: version.c  version_deployed.c
